Fikset Gradle 9-warnings